--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,1 +1,11 @@
+Version 5.0.0 - 2020-03-09
+* Bug fixes (see git logs for details)
+
+Version 4.0.0 - 2017-06-01
+* Bug fixes (see git logs for details)
+
+Version 3.2.0 - 2016-02-01
+* Bug fixes (see git logs for details)
+
+Version 2.8 - 2014-12-01
 * Initial release
