--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Version 7.0.0 - 2024-07-30
+* Bug fixes (see git logs for details)
+
 Version 5.0.0 - 2020-03-09
 * Bug fixes (see git logs for details)
 
